# source-transition-manager

./: CMakeLists.txt  README.md  buildspec.json
.github/workflows/: push.yaml
data/locale/: en-US.ini
installer/: source-transition-manager-installer.nsi
src/: SourceTransitionDock.cpp  SourceTransitionDock.hpp  plugin-main.cpp
